--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             </div>
             <div class="footer-section">
                 <h3>Contacto</h3>
-                <p><i class="fas fa-phone"></i> +52 55 1234 5678</p>
-                <p><i class="fas fa-envelope"></i> info@respuestosweb.com</p>
+                <p><i class="fas fa-phone"></i> +591 78570322</p>
+                <p><i class="fas fa-envelope"></i> wgarridomontano@gmail.com</p>
             </div>
             <div class="footer-section">
                 <h3>Enlaces Rápidos</h3>
@@ -163,7 +163,7 @@
                 <a href="contacto.html">Contacto</a>
             </div>
         </div>
-        <p class="footer-copyright">&copy; 2024 RespuestosWeb. Todos los derechos reservados.</p>
+        <p class="footer-copyright">&copy; 2025 RespuestosWeb. Todos los derechos reservados.</p>
     </footer>
 
     <script src="js/particulasfondo.js"></script>
@@ -173,5 +173,6 @@
     <script src="js/index-content.js"></script>
     
 </body>
+
 
 </html>
