--- a/contacto.html
+++ b/contacto.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="info-content">
                         <h3>Email</h3>
-                        <p>info@respuestosweb.com</p>
+                        <p>wgarridomontano@gmail.com</p>
                         <p class="info-horario">Respuesta en menos de 24 horas</p>
                     </div>
                 </div>
@@ -95,9 +95,8 @@
                     </div>
                     <div class="info-content">
                         <h3>Dirección</h3>
-                        <p>Av. Principal 123</p>
-                        <p>Col. Centro, Ciudad de México</p>
-                        <p class="info-horario">C.P. 06000</p>
+                        <p>3er anillo externo Av. alemana</p>
+                       
                     </div>
                 </div>
 
@@ -173,10 +172,10 @@
             <div class="mapa-placeholder">
                 <div class="mapa-mock">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Av. Principal 123, Ciudad de México</p>
+                    <p>3er anillo externo Av. alemana</p>
                     <div class="mapa-coords">
-                        <span>19.4326° N</span>
-                        <span>99.1332° W</span>
+                        <span>0000000</span>
+                        <span>0000000</span>
                     </div>
                 </div>
             </div>
@@ -192,8 +191,8 @@
             </div>
             <div class="footer-section">
                 <h3>Contacto Rápido</h3>
-                <p><i class="fas fa-phone"></i> +52 55 1234 5678</p>
-                <p><i class="fas fa-envelope"></i> contacto@respuestosweb.com</p>
+                <p><i class="fas fa-phone"></i> +591 78570322</p>
+                <p><i class="fas fa-envelope"></i> wgarridomontano@gmail.com</p>
             </div>
             <div class="footer-section">
                 <h3>Enlaces</h3>
@@ -202,7 +201,7 @@
                 <a href="accesorios.html">Accesorios</a>
             </div>
         </div>
-        <p class="footer-copyright">&copy; 2024 RespuestosWeb. Todos los derechos reservados.</p>
+        <p class="footer-copyright">&copy; 2025 RespuestosWeb. Todos los derechos reservados.</p>
     </footer>
 
     <script src="js/particulasfondo.js"></script>
@@ -212,5 +211,6 @@
     <script src="js/contacto.js"></script>
     
 </body>
+
 
 </html>
