--- a/contacto.html
+++ b/contacto.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="info-content">
                         <h3>Teléfono</h3>
-                        <p>+52 55 1234 5678</p>
+                        <p>+591 78570322</p>
                         <p class="info-horario">Lunes a Viernes: 9:00 AM - 6:00 PM</p>
                     </div>
                 </div>
@@ -128,14 +128,14 @@
                         <label for="email">
                             <i class="fas fa-envelope"></i> Correo electrónico
                         </label>
-                        <input type="email" id="email" placeholder="ejemplo@correo.com" required>
+                        <input type="email" id="email" placeholder="ejemplo@gmail.com" required>
                     </div>
 
                     <div class="form-group">
                         <label for="telefono">
                             <i class="fas fa-phone"></i> Teléfono
                         </label>
-                        <input type="tel" id="telefono" placeholder="+52 55 1234 5678">
+                        <input type="tel" id="telefono" placeholder="+591 00000000">
                     </div>
 
                     <div class="form-group">
@@ -214,3 +214,4 @@
 
 
 </html>
+
