--- a/registro.html
+++ b/registro.html
@@ -43,7 +43,7 @@
                 <!-- Teléfono -->
                 <div class="form-group">
                     <label for="phone"><i class="fas fa-phone"></i> Teléfono</label>
-                    <input type="tel" id="phone" placeholder="+52 123 456 7890" required>
+                    <input type="tel" id="phone" placeholder="00000000" required>
                     <div class="error-message" id="phoneError"></div>
                     <div class="hint">Incluye código de país y área</div>
                 </div>
@@ -51,7 +51,7 @@
                 <!-- Dirección -->
                 <div class="form-group">
                     <label for="address"><i class="fas fa-home"></i> Dirección</label>
-                    <textarea id="address" placeholder="Calle, número, colonia, ciudad, estado, código postal" rows="2"></textarea>
+                    <textarea id="address" placeholder="Calle, número, ciudad" rows="2"></textarea>
                     <div class="error-message" id="addressError"></div>
                     <div class="hint">Para envíos de productos</div>
                 </div>
@@ -162,4 +162,5 @@
     <script src="js/registro.js"></script>
     
 </body>
+
 </html>
